Arreglos en la parte de codigo al momento de llamar algun archivo url, src, etc..

--- a/estilo.css
+++ b/estilo.css
@@ -91,7 +91,7 @@ header img {
     width: 13px;
     height: 8px;
     margin-left: 10px;
-    background-image: url('/assets/icons/down-arrow.svg');
+    background-image: url('./assets/icons/down-arrow.svg');
 }
 
 .header--button span img {
@@ -125,7 +125,7 @@ main {
     height: 200px;
     margin: 0 auto;
     margin-bottom: 50px;
-    background-image: url('/assets/img/Bitcoin.svg');
+    background-image: url('./assets/img/Bitcoin.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -217,7 +217,7 @@ main {
     width: 15px;
     height: 15px;
     margin-left: 8px;
-    background-image: url(/assets/icons/trending-down.svg);
+    background-image: url(./assets/icons/trending-down.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -228,7 +228,7 @@ main {
     width: 15px;
     height: 15px;
     margin-left: 8px;
-    background-image: url(/assets/icons/trending-up.svg);
+    background-image: url(./assets/icons/trending-up.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -314,7 +314,7 @@ main {
     display: inline-block;
     width: 30px;
     height: 30px;
-    background-image: url(/assets/icons/clock.svg);
+    background-image: url(./assets/icons/clock.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -325,7 +325,7 @@ main {
     display: inline-block;
     width: 30px;
     height: 30px;
-    background-image: url(/assets/icons/eye.svg);
+    background-image: url(./assets/icons/eye.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -336,7 +336,7 @@ main {
     display: inline-block;
     width: 30px;
     height: 30px;
-    background-image: url(/assets/icons/dollar-sign.svg);
+    background-image: url(./assets/icons/dollar-sign.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -347,7 +347,7 @@ main {
     display: inline-block;
     width: 30px;
     height: 30px;
-    background-image: url(/assets/icons/check-circle.svg);
+    background-image: url(./assets/icons/check-circle.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -358,7 +358,7 @@ main {
     width: 100%;
     min-width: 320px;
     height: 50vh;
-    background-image: url(/assets/img/bitcoinbaby2x.jpg);
+    background-image: url(./assets/img/bitcoinbaby2x.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -492,7 +492,7 @@ main {
     display: inline-block;
     width: 20px;
     height: 20px;
-    background-image: url(/assets/icons/orange-right-arrow.svg);
+    background-image: url(./assets/icons/orange-right-arrow.svg);
     vertical-align: text-bottom;
 }
 
